src/test/resources/syntax_errors/trailing_comma_in_decl.notc
void main() {
    string s, t, u, ;
}
